Sun Apr 30 23:52:11 CEST 2006  Christian Persch <chpe@gnome.org>

	* data/xchat-gnome.glade:
	* data/topic-change.glade:
	* data/connect-dialog.glade:
	* data/preferences-dialog.glade:
	  - Misc HIG spacing fixes. (#340189)

Sun Apr 30 22:52:52 CEST 2006  Guillaume Desmottes <cass@skynet.be>
	* src/fe-gnome/fe-gnome.c:
	  - Fix a crash when opening a new query window. (#340142)

Sun Apr 30 12:17:14 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	* data/xchat-gnome.glade:
	  - Pressing enter on the "Change Nick" prompt performs the
	    default action. (Launchpad: #42130)
	  - Change label from "OK" to "Change"; more HIG spirit.

Sun Apr 23 00:17:04 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/navigation-tree.c:
	  - Disconnect the server when we close it using the right
	    click menu. (Launchpad: #40815)

Sat Apr 22 23:06:24 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	  - Display the default menu when you right click in a private
	    window.

Fri Apr 21 17:09:21 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/gui.h:
	* src/fe-gnome/topic-label.c:
	* data/xchat-gnome.glade:
	  - Don't show the topic bar in server windows (#333856).

Thu Apr 20 09:05:39 CEST 2006  Isak Savo <isak.savo@gmail.com>

	* plugins/autoaway/xscreensaver.c:
	  - Fix a crash with xscreensaver backend. (Launchpad: #39461)
	  - Make autoaway work on non-english systems

Tue Apr 18 17:30:14 MDT 2006  Brian Pepple <bdpepple@ameritech.net>

	* plugins/perl/perl.c:
	* plugins/dbus/xchat-gnome-remote.c:
	* src/common/outbound.c:
	* src/common/servlist.c:
	* src/common/cfgfiles.c:
	* src/common/plugin.c:
	* src/common/ctcp.c:
	* src/fe-gnome/preferences.c:
	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/about.c:
	* src/fe-gnome/setup-dialog.c:
	* configure.ac:
	  - Drop version from AM_INIT_AUTOMAKE, and use AutoConf's macros for